# video_compositor

./: .gitignore  Cargo.toml  README.md  rules.json
.cargo/: config.toml
src/: compositor.rs  io.rs  lib.rs  main.rs  types.rs  write.rs
src/compositor/: mod.rs  simd.rs
