[package]
name = "video_recompositor"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.24"
byteorder = "1.5" # for reading/writing big-endian integers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10" # for multithreaded frame processing
safe_arch = "0.6" # access to portable SIMD
memmap2 = "0.9.5"
